
[package]
name = "rig"
version = "0.3.1"
edition = "2021"
authors = ["Gábor Csárdi <csardi.gabor@gmail.com"]
license = "MIT"
description = "Manage R installations"
readme = "README.md"
homepage = "https://github.com/gaborcsardi/rig"
repository = "https://github.com/gaborcsardi/rig"
keywords = ["R", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "riglib"
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "rig"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.15"
directories = "4.0.1"
futures = "0.3.17"
futures-util = "0.3.14"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
nix = "0.23.0"
rand = "0.8.5"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9.8"
shellexpand = "2.1.0"
simple-error = "0.2.3"
simplelog = { version = "^0.12.0", features = ["paris"] }
sudo = "0.6.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
remove_dir_all = "0.7.0"
winreg = "0.10"

[build-dependencies]
clap = "3.0.10"
clap_complete = "3.0.4"
lazy_static = "1.4.0"
simplelog = { version = "^0.12.0", features = ["paris"] }
static_vcruntime = "2.0"
